LABX-295 Contracts: update to the latest stable versions of libs; increase gasLimit to 8000000

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "migrate": "npx truffle migrate",
     "migrate:reset": "npx truffle migrate --reset",
     "console": "npx truffle console --network development",
-    "testrpc": "npx ganache-cli -g 1 --gasLimit 4700000 --trace_request true | grep -Ev \"FilterSubprovider|eth_getFilterChanges\""
+    "testrpc": "npx ganache-cli -g 1 --gasLimit 8000000 --trace_request true | grep -Ev \"FilterSubprovider|eth_getFilterChanges\""
   },
   "repository": {
     "type": "git",
@@ -28,11 +28,11 @@
   "homepage": "https://github.com/ChronoBank/LX-SC#readme",
   "dependencies": {
     "abi-decoder": "^1.0.9",
-    "solidity-shared-lib": "chronobank/solidity-shared-lib#v0.2.1",
-    "solidity-eventshistory-lib": "chronobank/solidity-eventshistory-lib#develop",
-    "solidity-storage-lib": "chronobank/solidity-storage-lib#develop",
-    "solidity-roles-lib": "chronobank/solidity-roles-lib#develop",
-    "solidity-user-lib": "chronobank/solidity-user-lib#develop",
+    "solidity-shared-lib": "chronobank/solidity-shared-lib#v0.2.2",
+    "solidity-eventshistory-lib": "chronobank/solidity-eventshistory-lib#v0.1.1",
+    "solidity-storage-lib": "chronobank/solidity-storage-lib#v0.2.0",
+    "solidity-roles-lib": "chronobank/solidity-roles-lib#v0.1.0",
+    "solidity-user-lib": "chronobank/solidity-user-lib#v0.1.0",
     "truffle-hdwallet-provider": "mikefluff/truffle-hdwallet-provider#7a2eccca1ba17c235a3ef258914ca74ea5f13014"
   },
   "devDependencies": {
