--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ language: node_js
 node_js: 8
 
 before_install:
-- export NODE_OPTIONS="--max_old_space_size=4096"
-- export PATH=$PATH:$(pwd)/node_modules/.bin
+  - export NODE_OPTIONS="--max_old_space_size=4096"
+  - export PATH=$PATH:$(pwd)/node_modules/.bin
+before_script:
+  - npm run testrpc > /dev/null &
+  - sleep 5
 script:
-- ganache-cli -g 1 > /dev/null &
-- truffle test
+  - npx truffle test
