--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ Test:
   script:
     - export NODE_OPTIONS="--max_old_space_size=4096"
     - export PATH=$PATH:$(pwd)/node_modules/.bin
+    - npm install -g truffle-hdwallet-provider@0.0.3
     - npm run testrpc > /dev/null &
     - sleep 5
     - npx truffle test
