--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,17 +20,19 @@ Build&TEST:
   variables:
     DOCKER_DRIVER: overlay2
   retry: 2
-  script:
+  before_script:
     - apt update
     - apt install -y python make g++ git build-essential
     - npm install --save-dev -g pm2@2.7.1 nyc mocha npx
     - npm install eslint@^4.9.0 truffle-hdwallet-provider@0.0.3
     - export NODE_OPTIONS="--max_old_space_size=4096"
     - export PATH=$PATH:$(pwd)/node_modules/.bin
+  script:
     - npm install
     - npm run testrpc > /dev/null &
     - sleep 5
     - npx truffle test
+    - kill -s SIGTERM $(ps aux | grep npm | awk '{print$2}')
 
 
   artifacts:
