--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,9 @@ Build&TEST:
     - npm run testrpc > /dev/null &
     - sleep 5
     - npx truffle test
-    - kill -9 $(ps aux | grep npm | awk '{print$2}')
-    - kill -9 $(ps aux | grep testrpc | awk '{print$2}')
+    - npm stop testrpc
+    #- kill -9 $(ps aux | grep npm | awk '{print$2}')
+    #- kill -9 $(ps aux | grep testrpc | awk '{print$2}')
     - exit 0
 
   artifacts:
