--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@laborx/sc",
-  "version": "0.0.10",
+  "version": "0.0.11-alpha.1",
   "description": "ChronoBank Labor-X Smart Contracts",
   "scripts": {
     "test:all": "npx truffle test",
