--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.11-alpha.1",
   "description": "ChronoBank Labor-X Smart Contracts",
   "scripts": {
-    "test:all": "npx truffle test",
-    "compile": "npx truffle compile",
-    "compile:all": "npx truffle compile --all",
+    "test": "npx truffle test",
+    "compile": "make compile",
+    "compile:all": "make compile.all",
     "migrate": "npx truffle migrate",
     "migrate:reset": "npx truffle migrate --reset",
     "console": "npx truffle console --network development",
-    "testrpc": "npx ganache-cli -g 1 --gasLimit 8000000 --trace_request true | grep -Ev \"FilterSubprovider|eth_getFilterChanges\""
+    "testrpc": "make run_testrpc"
   },
   "repository": {
     "type": "git",
