--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
+# Sensetive keystore 
+
+keystore/secrets.json
+
 build/
 package-lock.json
 /.idea/
