--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "migrate": "npx truffle migrate",
     "migrate:reset": "npx truffle migrate --reset",
     "console": "npx truffle console --network development",
-    "testrpc": "make run_testrpc"
+    "testrpc": "make run_testrpc",
+    "init:after:migration": "npx truffle exec ./scripts/4_initial_setup.js"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
     "ganache-cli": "6.1.4",
     "truffle-core": "be1box/truffle-core",
     "babel-polyfill": "^6.26.0",
-    "standard-version": "^4.0.0"
+    "standard-version": "^4.0.0",
+    "truffle-hdwallet-privkey-provider": "^0.0.8"
   }
 }
