--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ jspm_packages
 # Optional npm cache directory
 .npm
 
+# npm pack
+*.tgz
+package*
+
 # Optional REPL history
 .node_repl_history
 
