--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "truffle-hdwallet-provider": "mikefluff/truffle-hdwallet-provider#7a2eccca1ba17c235a3ef258914ca74ea5f13014"
   },
   "devDependencies": {
+    "@truffle-types/abi-minifier": "^0.1.3",
     "ganache-cli": "6.1.4",
     "truffle-core": "be1box/truffle-core",
     "babel-polyfill": "^6.26.0",
